--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Install Dependencies
+      - name: Install Bun
         uses: oven-sh/setup-bun@v1
       - name: Install Dependencies
         run: bun
